Issue #19613: remove preview as javac also used wihtout preview